--- a/LSFA/LSFA23-revised.tex
+++ b/LSFA/LSFA23-revised.tex
@@ -975,10 +975,10 @@ The second lemma corresponds to the invertibility of phase $\vdash_\RI$.
         \deduce{[S \mid \Gamma \vdash_{\LI} Q_i]_{i \in [1 , \dots , m]}}{fs}
       }
       \quad
-      \infer[\tr^{\LI}]{S \mid \Gamma , \Delta \vdash_{\LI} A \ot B}{
+      \infer[\tr^{\LI}]{S \mid \Gamma , \Delta \vdash_{\LI} A \ot B'}{
         \deduce{[S \mid \Gamma \vdash_{\LI} P_i]_{i \in [1 , \dots , n]}}{fs}
         &
-        - \mid \Delta \vdash_{\RI} B
+        - \mid \Delta \vdash_{\RI} B'
       }
     \end{array}
   \end{displaymath}
@@ -2099,7 +2099,7 @@ The statement of Proposition \ref{prop:GenRightRules} for the focused sequent ca
       }
       \quad
       \infer[\orrtwo^{\LI}]{S \mid \Gamma \vdash_{\LI} A \lor B}{
-        \deduce{[S \mid \Gamma , \Gamma'_i \vdash_{\LI} P_i]_{i \in [1 , \dots , n]}}{fs}
+        \deduce{[S \mid \Gamma , \Gamma''_i \vdash_{\LI} Q_i]_{i \in [1 , \dots , m]}}{fs}
       }
       \\
       \infer[\tr^{\LI}]{S \mid \Gamma , \Delta \vdash_{\LI} A \ot B'}{
@@ -2110,7 +2110,7 @@ The statement of Proposition \ref{prop:GenRightRules} for the focused sequent ca
     \end{array}
   \end{displaymath}
   are admissible, where
-  $\impconj{A} = [(\Gamma'_1 , P_1) , \dots , (\Gamma'_n , P_n)]$ and $\impconj{B} = [(\Gamma'_1 , P_1) , \dots , (\Gamma'_n , P_n)]$.
+  $\impconj{A} = [(\Gamma'_1 , P_1) , \dots , (\Gamma'_n , P_n)]$ and $\impconj{B} = [(\Gamma''_1 , Q_1) , \dots , (\Gamma''_m , Q_m)]$.
 \end{proposition}
 % \niccolo{Write the statement of the proposition}
 
@@ -2120,7 +2120,7 @@ Derivations in the sequent calculus are equated by a congruence relation $\circe
 %In order to eliminate non-determinism related to permutative conversions of non-invertible rules, the focused calculus prioritizes the left-invertible rules over the right ones and employs tag annotations to ensure completeness.
 The focused sequent calculus is a concrete presentation of the free distributive skew monoidal category on the set of atomic formulae. Therefore the normalization/focusing algorithm determines a procedure for solving the coherence problem of distributive skew monoidal categories.
 
-In the final part of the paper, we have looked at extensions of the logic with additive units, a skew exchange rule in the style of Bourke and Lack \cite{bourke:lack:braided:2020}, and linear implication. This section still needs to be formalized in Agda, which will be our immediate forthcoming step.
+In the final part of the paper, we have looked at extensions of the logic with additive units, a skew exchange rule in the style of Bourke and Lack \cite{bourke:lack:braided:2020}, and linear implication. This section still needs to be formalized in Agda, which will be our forthcoming step.
 
 This paper takes one step further in a large project aiming at modularly analyzing proof systems with categorical models given by categories with skew structure \cite{zeilberger:semiassociative:19, uustalu:sequent:2021,uustalu:proof:nodate,uustalu:deductive:nodate,veltri:coherence:2021,UVW:protsn}. We are interested in looking for applications of these systems to combinatorics and linguistics, following the initial investigation by Zeilberger \cite{zeilberger:semiassociative:19} and Moortgat \cite{moortgat:tamari:20}.
  %, which is a skew version of noncommutative intuitionistic linear logic with additive conjunction and disjunction and has skew monoidal closed categories with products and coproducts as its models.
