--- a/LSFA/LSFA.bib
+++ b/LSFA/LSFA.bib
@@ -432,3 +432,17 @@
   note = {Slides available at: \url{http://cla.tcs.uj.edu.pl/history/2020/pdfs/CLA_slides_Moortgat.pdf}}
 }
 
+@inproceedings{veltri:multifocus:23,
+  author       = {Niccol{\`{o}} Veltri},
+  editor       = {Helle Hvid Hansen and
+                  Andre Scedrov and
+                  Ruy J. G. B. de Queiroz},
+  title        = {Maximally Multi-focused Proofs for Skew Non-Commutative {MILL}},
+  booktitle = {Proceedings\ of 29th International\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2023},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13923},
+  pages        = {377--393},
+  publisher    = {Springer},
+  year         = {2023},
+  doi          = {10.1007/978-3-031-39784-4\_24}
+}
