--- a/LSFA/LSFA.bib
+++ b/LSFA/LSFA.bib
@@ -100,7 +100,7 @@
   pages     = {383--396},
   publisher = {Springer},
   year      = {2008},
-  note       = {{D}OI: \url{10.1007/978-0-387-09680-3\_26}}
+  doi       = {10.1007/978-0-387-09680-3\_26}
 }
 
 @inproceedings{eilenberg:closed:1966,
@@ -192,7 +192,7 @@
   number={3},
   pages={154--170},
   year={1958},
-  note={{D}OI: \url{10.2307/2310058}}
+  doi = {10.2307/2310058}
 }
 
 @article{lambek:deductive:68,
@@ -238,7 +238,7 @@
                Ddier R{\'{e}}my},
   title     = {Which Simple Types Have a Unique Inhabitant?},
   booktitle = {Proceedings of 20th {ACM} {SIGPLAN} International Conference on
-               Functional Programming, ICFP~'15},
+               Functional Programming, ICFP 2015},
   pages     = {243--255},
   publisher = {{ACM}},
   year      = {2015},
@@ -370,7 +370,7 @@
   number    = {1},
   eid = 9,
   year      = {2019},
-  note       = {{D}OI: \url{10.23638/lmcs-15(1:9)2019}}
+  doi       = {10.23638/lmcs-15(1:9)2019}
 }
 
 @incollection{dyckhoff:ljq,
@@ -427,7 +427,7 @@
 @misc{moortgat:tamari:20,
   author = {Michael Moortgat},
   title = {The {T}amari order for $D^3$ and derivability in semi-associative {L}ambek-{G}rishin {C}alculus},
-  howpublished = {Talk at 16th Wksh. on Computational Logic and Applications (CLA'20)},
+  howpublished = {Talk at 16th Workshop on Computational Logic and Applications, CLA 2020},
   year = {2020},
   note = {Slides available at: \url{http://cla.tcs.uj.edu.pl/history/2020/pdfs/CLA_slides_Moortgat.pdf}}
 }
@@ -438,7 +438,7 @@
                   Andre Scedrov and
                   Ruy J. G. B. de Queiroz},
   title        = {Maximally Multi-focused Proofs for Skew Non-Commutative {MILL}},
-  booktitle = {Proceedings\ of 29th International\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2023},
+  booktitle = {Proceedings of 29th International\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2023},
   series       = {Lecture Notes in Computer Science},
   volume       = {13923},
   pages        = {377--393},
