minor change in last sentence

--- a/LSFA/LSFA23-eptcs.tex
+++ b/LSFA/LSFA23-eptcs.tex
@@ -1360,7 +1360,7 @@ In the final part of the paper, we have looked at extensions of the logic with a
 This paper takes one step further in a large project aiming at modularly analyzing proof systems with categorical models given by categories with skew structure \cite{zeilberger:semiassociative:19, uustalu:sequent:2021,uustalu:proof:nodate,uustalu:deductive:nodate,veltri:coherence:2021,UVW:protsn}. We are interested in looking for applications of these systems to combinatorics and linguistics, following the initial investigation by Zeilberger \cite{zeilberger:semiassociative:19} and Moortgat \cite{moortgat:tamari:20}.
 
 We are interested in using the techniques introduced in this paper to design a calculus of normal forms for the classical linear logic MALL.
-In the latter setting, the situation is more complicated than the skew one, since there could be more than two formulae that one can focus on in the synchronous phase.
+In the latter setting, the situation is more complicated than the skew one, since there could be more than two formulae that can be under focus in the synchronous phase.
 We expect our calculus to give an alternative presentation of the maximally multi-focused proofs of Chaudhuri et al. \cite{chaudhuri:canonical:2008}.
 
 \paragraph{Acknowledgements}
